got config file working. Config file now tells scraper what to do

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "-DVCPKG_MANIFEST_MODE=OFF"
     ],
     "files.associations": {
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "iostream": "cpp"
     }
 }
